att do link do projeto 1

--- a/Index.html
+++ b/Index.html
@@ -117,8 +117,8 @@
         <div id="bg">
           <img src="IMAGE/macbook-pro-and-iphone-15-pro-mockup-668d797c8d5ba3076d5b5b6d-@2x.png"
             alt="imagem do site sobre academia" srcset="" class="escondido">
-          <a href="https://66afea383cf2b4fd81b52208--zesty-daffodil-e67969.netlify.app/"> <button type="button"
-              class="botao escondido acao" id="btnprojetos">Ver
+          <a href="https://panfletogen.netlify.app/"> <button type="button" class="botao escondido acao"
+              id="btnprojetos">Ver
               projeto</button></a>
         </div>
         <div id="bg">
