--- a/Bompravoce.html
+++ b/Bompravoce.html
@@ -17,7 +17,6 @@
         <article id="first">
             <section class="double">
                 <div>
-                    <h1>Supermercado Bom Pra Você</h1>
                     <p class="detalhes">Bem-vindo ao Supermercado Bom Pra Você, onde você encontra tudo o que precisa
                         para o seu dia a dia com comodidade e preços acessíveis.</p>
                     <br>
@@ -119,7 +118,7 @@
             </section>
         </article>
         <article>
-            <section id="sobre">
+            <section id="sobre" class="sobre">
                 <div class="bgs">
                     <div id="headersobre">
                         <h1>Sobre Nós</h1>
@@ -128,14 +127,14 @@
                         <div class="arrow" id="arrow1">▶ Uma historia de sucesso</div>
                         <div class="content" id="content1">
                             <div class="line-vertical"></div>
-                            <div class="bgi">
-                                <p>O Supermercado Bom Pra Você é uma empresa familiar com mais de 20 anos de experiência
-                                    no
-                                    mercado. Sempre buscamos oferecer os melhores produtos e serviços aos nossos
-                                    clientes,
-                                    com
-                                    foco na qualidade, frescor e preços acessíveis.</p>
-                            </div>
+
+                            <p>O Supermercado Bom Pra Você é uma empresa familiar com mais de 20 anos de experiência
+                                no
+                                mercado. Sempre buscamos oferecer os melhores produtos e serviços aos nossos
+                                clientes,
+                                com
+                                foco na qualidade, frescor e preços acessíveis.</p>
+
                         </div>
 
                         <div class="arrow" id="arrow2">▶ Nosso Compromisso</div>
@@ -169,23 +168,49 @@
 
 
             <section id="contatos">
-                <div id="imgcnt">
-                    <aside id="imgcnt-g"><img src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt=""></aside>
-                </div>
-                <div id="titulo">
-                    <h1>contatos</h1>
-                </div>
-                <div id="telefone">
-                    <h3>Telefone</h3>
-                    <a href="tel:+55(61)99374-2005">(61)99374-2005</a>
-                </div>
-                <div id="email">
-                    <h3>E-mail</h3>
-                    <a href="mailto:Bompravoce@gmail.com">Bompravoce@gmail.com</a>
-                </div>
-                <div id="endereco">
-                    <h3>Endereço</h3>
-                    <address> Qs 118 s n cj 6 lt 2, Samambaia - DF, 72302-576</address>
+                <div class="bg-cont">
+                    <img id="imgcnt" class="contato-itens" src="IMAGE/0sZ6u1Er1ShCELkVoARga.jpg" alt="">
+                    <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" id="nada">
+                        <!-- Fundo cinza em forma de seta com corpo e encaixe -->
+                        <polygon points="50,90 10,40 35,40 35,10 65,10 65,40 90,40" fill="grey" />
+                        <!-- Número no meio da seta -->
+                        <text x="50" y="55" font-size="20" text-anchor="middle" fill="white">5</text>
+                    </svg>
+
+                    <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" id="seta1">
+                        <!-- Fundo cinza em forma de seta com corpo e encaixe -->
+                        <polygon points="50,90 10,40 35,40 35,10 65,10 65,40 90,40" fill="grey" />
+                        <!-- Número no meio da seta -->
+                        <text x="50" y="55" font-size="20" text-anchor="middle" fill="white">1</text>
+                    </svg>
+                    <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" id="seta2">
+                        <!-- Fundo cinza em forma de seta com corpo e encaixe -->
+                        <polygon points="50,90 10,40 35,40 35,10 65,10 65,40 90,40" fill="grey" />
+                        <!-- Número no meio da seta -->
+                        <text x="50" y="55" font-size="20" text-anchor="middle" fill="white">2</text>
+                    </svg>
+                    <svg width="100" height="100" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" id="seta3">
+                        <!-- Fundo cinza em forma de seta com corpo e encaixe -->
+                        <polygon points="50,90 10,40 35,40 35,10 65,10 65,40 90,40" fill="grey" />
+                        <!-- Número no meio da seta -->
+                        <text x="50" y="55" font-size="20" text-anchor="middle" fill="white">3</text>
+                    </svg>
+                    <div id="titulo" class="contato-itens">
+                        <h1>contatos</h1>
+                    </div>
+                    <div id="telefone" class="contato-itens">
+                        <h3>Telefone</h3>
+                        <a href="tel:+55(61)99374-2005">(61)99374-2005</a>
+                    </div>
+                    <div id="email" class="contato-itens">
+
+                        <h3>E-mail</h3>
+                        <a href="mailto:Bompravoce@gmail.com">Bompravoce@gmail.com</a>
+                    </div>
+                    <div id="endereco" class="contato-itens">
+                        <h3>Endereço</h3>
+                        <address> Qs 118 s n cj 6 lt 2, Samambaia - DF, 72302-576</address>
+                    </div>
                 </div>
 
             </section>
