alt: style amostras bg and img

--- a/Index.html
+++ b/Index.html
@@ -115,14 +115,13 @@
       <h1 class="titulo">Projetos</h1>
       <div>
         <div id="bg">
-          <img src="IMAGE/macbook-pro-and-iphone-15-pro-mockup-668d797c8d5ba3076d5b5b6d-@2x.png"
-            alt="imagem do site sobre academia" srcset="" class="escondido">
+          <img src="IMAGE/projeto-2_n.png" alt="imagem do site sobre academia" srcset="" class="escondido">
           <a href="https://panfletogen.netlify.app/"> <button type="button" class="botao escondido acao"
               id="btnprojetos">Ver
               projeto</button></a>
         </div>
         <div id="bg">
-          <img src="IMAGE/macbook-pro-and-iphone-15-2.png" alt="imagem do site sobre Café" class="escondido">
+          <img src="IMAGE/projeto-2_n.png" alt="imagem do site sobre Café" class="escondido">
           <a href="/Bompravoce.html"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver
               projeto</button></a>
         </div>
