alt: add projeto 3

--- a/Index.html
+++ b/Index.html
@@ -125,6 +125,12 @@
           <a href="/Bompravoce.html"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver
               projeto</button></a>
         </div>
+        <div id="bg">
+          <img src="IMAGE/projeto-2_n.png" alt="imagem do site sobre Café" class="escondido">
+          <a href="https://prevenirhipertensao.netlify.app/"> <button type="button" class="botao escondido acao"
+              id="btnprojetos">Ver
+              projeto</button></a>
+        </div>
     </section>
     </div>
     <div class="espaço"></div>
