bugs do bpv, projetos grid claro/ escuro

--- a/Index.html
+++ b/Index.html
@@ -115,7 +115,8 @@
       <h1 class="titulo">Projetos</h1>
       <div>
         <div id="bg">
-          <img src="IMAGE/projeto-2_n.png" alt="imagem do site sobre academia" srcset="" class="escondido">
+          <img src="IMAGE/454659318_1223902839036800_1049136231319704015_n.png" alt="imagem do site sobre academia"
+            srcset="" class="escondido">
           <a href="https://panfletogen.netlify.app/"> <button type="button" class="botao escondido acao"
               id="btnprojetos">Ver
               projeto</button></a>
@@ -126,7 +127,8 @@
               projeto</button></a>
         </div>
         <div id="bg">
-          <img src="IMAGE/projeto-2_n.png" alt="imagem do site sobre Café" class="escondido">
+          <img src="IMAGE/453323963_2697523823762149_3548373700704308313_n.png" alt="imagem do site sobre Café"
+            class="escondido">
           <a href="https://prevenirhipertensao.netlify.app/"> <button type="button" class="botao escondido acao"
               id="btnprojetos">Ver
               projeto</button></a>
