--- a/Index.html
+++ b/Index.html
@@ -59,6 +59,7 @@
     <article>
       <section id="inicial">
         <div>
+          <img src="" alt="" class="fotodeperfil">
           <h1 class="escondido">Vinícius Alvino</h1>
           <p class="destalhes escondido">Sou um desenvolvedor web apaixonado por criar sites e aplicativos inovadores
             que oferecem
