--- a/pista.html
+++ b/pista.html
@@ -327,6 +327,11 @@
             sinal2.classList.remove('sinalaberto');
             sinal4.classList.remove('sinalaberto');
 
+            faixa1.classList.add('faixaaberta');
+            faixa3.classList.add('faixaaberta');
+            faixa2.classList.add('faixaaberta');
+            faixa4.classList.add('faixaaberta');
+
         }
 
         function runcode() {
