--- a/pista.html
+++ b/pista.html
@@ -236,7 +236,7 @@
 
         <!-- Sinais de Trânsito -->
         <!--sinal 1-->
-        <button onclick="runcode()"> abrir sinal 1</button>
+        <button onclick="runcode()">START</button>
         <div id="sinal1" class="sinal sinal1">1</div>
         <div id="faixa1" class="faixa faixa1">
             <div class="faixaunitaria"></div>
