add projeto 4, alt de img projeto 2

--- a/Index.html
+++ b/Index.html
@@ -116,14 +116,14 @@
       <h1 class="titulo">Projetos</h1>
       <div>
         <div id="bg">
-          <img src="IMAGE/454659318_1223902839036800_1049136231319704015_n.png" alt="imagem do site sobre academia"
+          <img src="IMAGE/454659318_1223902839036800_1049136231319704015_n.png" alt="imagem do site sobre panfletos"
             srcset="" class="escondido">
-          <a href="https://panfletogen.netlify.app/"> <button type="button" class="botao escondido acao"
+          <a href="https://flyergen.netlify.app/"> <button type="button" class="botao escondido acao"
               id="btnprojetos">Ver
               projeto</button></a>
         </div>
         <div id="bg">
-          <img src="IMAGE/projeto-2_n.png" alt="imagem do site sobre Café" class="escondido">
+          <img src="IMAGE/Bom pra voce.png" alt="imagem do site sobre Café" class="escondido">
           <a href="/Bompravoce.html"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver
               projeto</button></a>
         </div>
@@ -132,6 +132,11 @@
             class="escondido">
           <a href="https://prevenirhipertensao.netlify.app/"> <button type="button" class="botao escondido acao"
               id="btnprojetos">Ver
+              projeto</button></a>
+        </div>
+        <div id="bg">
+          <img src="IMAGE/calculadora.png" alt="imagem do site sobre Café" class="escondido">
+          <a href="/calculadora.html"> <button type="button" class="botao escondido acao" id="btnprojetos">Ver
               projeto</button></a>
         </div>
     </section>
