--- a/pista.html
+++ b/pista.html
@@ -315,7 +315,7 @@
         function estacao3() {
             //fecha os sinais 3 e 1
             sinal1.classList.remove('sinalaberto');
-            sinal3.classList.remove('sinalaberto2');
+            sinal3.classList.remove('sinalaberto');
             //abre o sinal 2
             sinal2.classList.add('sinalaberto');
             //abre as faixas 1 e 3
