--- a/pista.html
+++ b/pista.html
@@ -240,7 +240,7 @@
         <button id="startBtn">START</button>
         <br>
         <button id="stopBtn" onclick="stopChain()">STOP</button>
-        <div id="sinal1" class="sinal sinal1">1</div>
+        <div id="sinal1" class="sinal sinal1"></div>
         <div id="faixa1" class="faixa faixa1">
             <div class="faixaunitaria"></div>
             <div class="faixaunitaria"></div>
@@ -249,7 +249,7 @@
             <div class="faixaunitaria"></div>
         </div>
         <!--sinal 2-->
-        <div id="sinal2" class="sinal sinal2">2</div>''
+        <div id="sinal2" class="sinal sinal2"></div>''
         <div id="faixa2" class="faixa faixa2">
             <div class="faixaunitaria"></div>
             <div class="faixaunitaria"></div>
@@ -258,7 +258,7 @@
             <div class="faixaunitaria"></div>
         </div>
         <!--sinal 3-->
-        <div id="sinal3" class="sinal sinal3">3</div>
+        <div id="sinal3" class="sinal sinal3"></div>
         <div id="faixa3" class="faixa faixa3">
             <div class="faixaunitaria"></div>
             <div class="faixaunitaria"></div>
@@ -267,7 +267,7 @@
             <div class="faixaunitaria"></div>
         </div>
         <!--sinal 4-->
-        <div id="sinal4" class="sinal sinal4">4</div>
+        <div id="sinal4" class="sinal sinal4"></div>
         <div id="faixa4" class="faixa  faixa4">
             <div class="faixaunitaria"></div>
             <div class="faixaunitaria"></div>
